--- a/css/style.css
+++ b/css/style.css
@@ -591,12 +591,18 @@ background-color: var(--second-button-color);
 .mailing-conteiner{
   width: 570px;
   height: 86px;
-  margin-left: 92px;
-  padding-top: 12px;
+  
+  
+  box-sizing: border-box;
+
+
+}
+.mailing-conteiner{
+  margin: 12px 0 0 auto;
 }
 .mailing-send{
   display: flex;
-
+align-items: baseline;
 }
 .input-mailing{
   width: 358px; 
@@ -607,6 +613,7 @@ background-color: var(--second-button-color);
   color: rgba(255, 255, 255, 0.6);
   margin-right: 12px;
   padding-left: 16px;
+
  
 }
 .address-icons-plane{
@@ -764,20 +771,26 @@ background-color: var(--second-button-color);
   position: fixed;
   top: 0;
   left: 0;
-  transition: opasity 250ms, visibility 250ms;
+  opacity: 1 ;
+  transition:  250ms, visibility 250ms;
 }
 .modal {
+  padding: 40px;
   width: 528px;
-  height: 581px;
+  min-height: 581px;
   background-color: var(--main-title-color);
   border-radius: 4px;
-  /*box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2)*/
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform:scale(1) translate(-50%, -50%);
   transition: transform 250ms;
+  box-sizing: border-box;
 }
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(0.7);
+}
+
 .modal-close {
   position: absolute;
   top: 10px;
@@ -792,18 +805,19 @@ background-color: var(--second-button-color);
   justify-content: center;
   box-sizing: border-box;
   cursor: pointer;
-
+  color: var(--second-button-color);
 }
+
 .modal-close:hover,
 .modal-close:focus {
   fill: currentColor;
   border: 1px solid var(--accent-color);
 }
-.close-icon {
+.icon-close {
   position: absolute;
 }
 .backdrope.is-hidden.modal {
-  transform: scale(1.5);
+  transform:scale(1.5);
 }
 /*--------Для скрытия модального окна--------*/
 
@@ -835,7 +849,7 @@ position: relative;
   position: absolute;
   top: 50%;
   transform: translateY(-50%);
-  left: 5px;
+  left: 15px;
   transition: var(--transition);
 }
 
@@ -887,45 +901,56 @@ position: relative;
 .modal-input-over{
   margin-bottom: 10px;
 }
+
 .modal-input-text{
-  font-size: 12px;
+   font-size: 12px;
    color: var(--third-text-color);
 }
+
+
+
+
+ /*--------Чекблок--------*/
+
+
+.check-text-color{
+  margin-left: 5px;
+  text-decoration: underline;
+  text-decoration-skip-ink: none;
+  color: var(--first-header-text-color);
+  
+}
+
 .modal-check-text{
-  font-size: 16px;
-  color:var(--third-text-color);
-  display: flex;
+  font-size: 14px;
+line-height: 1.7;
+letter-spacing: 0.03em;
+color: var(--third-text-color);
+display: flex;
+}
+.check-text-color{
+font-size: 14px;
+line-height: 1.7;
+letter-spacing: 0.03em;
 }
 .modal-check-text::before{
   content: "";
   width: 16px;
   height: 15px;
-  border: 2px solid black ;
-  border-radius: 2px;
+  border: 2px solid black;
   margin-right: 5px;
   display: block;
-  cursor: pointer;
-
+  border-radius: 2px;
 }
-
 .modal-check:checked + .modal-check-text::before{
-  background-color: cornflowerblue;
   background-image: url(../img/check.svg);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   border: none;
 
-} 
+}
 .check-text-color{
-  color: var(--second-button-color);
-  margin-left: 5px;
-  text-decoration: underline;
-  text-decoration-skip-ink: none;
+
 }
-.modal-checkbox {
-  position: absolute;
-  appearance: none;
-  -webkit-appearance: none;
-  -moz-appearance: none;
-}
+
