--- a/css/style.css
+++ b/css/style.css
@@ -567,7 +567,7 @@ background-color: var(--second-button-color);
   color: 250ms linear, cubic-bezier(0.6, -0.28, 0.735, 0.045);
 }
 .address-icons-icon {
-  fill: currentColor;
+fill:currentColor;
 }
 .address-icons-iteam {
   width: 44px;
@@ -835,14 +835,15 @@ align-items: baseline;
 .modal-title{
 font-size: 20px;
 font-weight: bold;
-line-height: 1.15px;
+line-height: 1.15;
 text-align: center;
 letter-spacing: 0.03em;
 color:var(--second-header-text-color);
-margin-bottom: 35px;
+margin-bottom: 12px;
 }
 .modal-form-field{
-margin-bottom: 30px;
+margin-bottom: 70px;
+margin: 0 auto;
 position: relative;
 }
 .imput-icon{
@@ -855,7 +856,7 @@ position: relative;
 
 .modal-input{
   width: 100%;
-  height: 45px;
+  height: 40px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   padding-right: 41px;
@@ -865,6 +866,28 @@ position: relative;
   background-color: transparent;
   color: teal;
   transition: var(--transition);
+}
+.hero-btnb{
+  font-weight: bold;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  color: var(--first-text-color);
+  cursor: pointer;
+  width: 200px;
+  height: 50px;
+  left: 700px;
+  top: 430px;
+  border-radius: 4px;
+  background: var(--second-button-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  margin: 0 auto;
+  display: flex;
+  border: none;
+  justify-content: center;
+  align-items: center;
+  transition: 0.25s cubic-bezier(0.6, -0.28, 0.735, 0.045);
+  margin-top: 30px;
 }
 .modal-input:focus,.modal-text:focus{
   border-color: var(--second-button-color);
@@ -900,7 +923,10 @@ position: relative;
 
 .modal-input-over{
   margin-bottom: 10px;
+  margin-top: 4px;
+
 }
+
 
 .modal-input-text{
    font-size: 12px;
@@ -910,7 +936,7 @@ position: relative;
 
 
 
- /*--------Чекблок--------*/
+ /*--------Чекбокс--------*/
 
 
 .check-text-color{
@@ -927,6 +953,9 @@ line-height: 1.7;
 letter-spacing: 0.03em;
 color: var(--third-text-color);
 display: flex;
+justify-content: center;
+align-items: center;
+box-sizing: border-box;
 }
 .check-text-color{
 font-size: 14px;
@@ -950,7 +979,5 @@ letter-spacing: 0.03em;
   border: none;
 
 }
-.check-text-color{
 
-}
 
